--- a/app/src/main/res/layout/fragment_start_2.xml
+++ b/app/src/main/res/layout/fragment_start_2.xml
@@ -11,13 +11,17 @@
 
     <ImageView
         android:id="@+id/photoSecond"
-        android:layout_width="wrap_content"
+        android:layout_width="350dp"
         android:layout_height="wrap_content"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:src="@drawable/start_second"
+        android:src="@drawable/screen2"
         android:background="@android:color/transparent"
+        android:layout_marginEnd="15dp"
+        android:layout_marginStart="15dp"
+        android:layout_marginBottom="15dp"
+        android:adjustViewBounds="true"
         />
 
     <TextView
@@ -28,7 +32,7 @@
         app:layout_constraintTop_toBottomOf="@id/photoSecond"
         app:layout_constraintStart_toStartOf="@id/photoSecond"
         app:layout_constraintEnd_toEndOf="@id/photoSecond"
-        android:layout_marginTop="80dp"
+        android:layout_marginTop="10dp"
         android:text="Не забывайте принимать таблетки и следите за курсами"
         />
 
