--- a/app/src/main/res/layout/fragment_start_3.xml
+++ b/app/src/main/res/layout/fragment_start_3.xml
@@ -11,13 +11,17 @@
 
     <ImageView
         android:id="@+id/photoThird"
-        android:layout_width="wrap_content"
+        android:layout_width="350dp"
         android:layout_height="wrap_content"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:src="@drawable/start_second"
+        android:src="@drawable/screen3"
         android:background="@android:color/transparent"
+        android:layout_marginEnd="15dp"
+        android:layout_marginStart="15dp"
+        android:layout_marginBottom="15dp"
+        android:adjustViewBounds="true"
         />
 
     <TextView
@@ -28,8 +32,8 @@
         app:layout_constraintTop_toBottomOf="@id/photoThird"
         app:layout_constraintStart_toStartOf="@id/photoThird"
         app:layout_constraintEnd_toEndOf="@id/photoThird"
-        android:layout_marginTop="80dp"
-        android:text="Отслеживайте статистику, графики и диаграмы ваших показателей"
+        android:layout_marginTop="10dp"
+        android:text="Отслеживайте статистику, в графиках ваших показателей"
         />
 
 
