--- a/app/src/main/res/layout/fragment_start_4.xml
+++ b/app/src/main/res/layout/fragment_start_4.xml
@@ -90,6 +90,7 @@
                     android:paddingStart="10dp"
                     android:paddingEnd="10dp"
                     android:inputType="textCapSentences"
+                    android:gravity="center_vertical"
                     />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
