--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Base.Theme.HealthCheck" parent="Theme.Material3.DayNight.NoActionBar">
+    <style name="whiteHealthCheck" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your light theme here. -->
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
         <item name="android:navigationBarColor">@color/navigation_bar_color</item>
@@ -8,7 +8,7 @@
 
     </style>
 
-    <style name="Theme.HealthCheck" parent="Base.Theme.HealthCheck" />
+    <style name="Theme.HealthCheck" parent="whiteHealthCheck" />
 
 <!-- custom styles  !-->
 
