--- a/app/src/main/res/layout/fragment_medicines_edit.xml
+++ b/app/src/main/res/layout/fragment_medicines_edit.xml
@@ -350,21 +350,20 @@
                     />
 
                 <ProgressBar
-                    style="?android:attr/progressBarStyleHorizontal"
                     android:id="@+id/progressBarMedicines"
+                    style="?android:attr/progressBarStyleHorizontal"
                     android:layout_width="105dp"
                     android:layout_height="105dp"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintBottom_toBottomOf="parent"
                     android:background="@drawable/circle_background"
-                    android:progressDrawable="@drawable/circle_progress"
                     android:indeterminate="false"
                     android:max="100"
-                    android:progress="1"
-                    app:layout_constraintVertical_bias="0.65"
-                    />
+                    android:progress="0"
+                    android:progressDrawable="@drawable/circle_progress"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintVertical_bias="0.65" />
 
                 <TextView
                     style="@style/diagramsDigitsStyle"
