Сделал тему как на телефоне

--- a/app/src/main/res/layout/fragment_start_3.xml
+++ b/app/src/main/res/layout/fragment_start_3.xml
@@ -33,7 +33,7 @@
         app:layout_constraintStart_toStartOf="@id/photoThird"
         app:layout_constraintEnd_toEndOf="@id/photoThird"
         android:layout_marginTop="10dp"
-        android:text="Отслеживайте статистику, в графиках ваших показателей"
+        android:text="Отслеживайте статистику ваших показателей в удобных гафиках"
         />
 
 
